--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -8,5 +8,5 @@ foreach(test_rule ${common_rules})
   get_filename_component(test_dir ${test_rule} DIRECTORY)
   get_filename_component(test_name ${test_dir} NAME)
   add_executable(test_${test_name} ${test_dir}/test.c)
-  target_link_libraries(test_${test_name} crypto)
+  target_link_libraries(test_${test_name} crypto uv_a)
 endforeach()
